examples/menus/tests/snapshots/flow__main_menu_tree_paper.snap
---
source: examples/menus/tests/flow.rs
expression: h.screen_tree()
---
ScreenTree(
  roots: [
    TreeNode(
      role: Screen,
      screen: Some("menus:main"),
      visible: true,
      children: [
        TreeNode(
          role: Panel,
          test_id: Some("main_menu"),
          tags: {
            "test_id": "main_menu",
          },
          widget: Some("slotted:panel"),
          visible: true,
          children: [
            TreeNode(
              role: Text,
              label: Some("demo.menus.title"),
              test_id: Some("title"),
              tags: {
                "test_id": "title",
              },
              widget: Some("slotted:text"),
              visible: true,
            ),
            TreeNode(
              role: Text,
              label: Some("slotted.menu.version"),
              test_id: Some("version"),
              tags: {
                "test_id": "version",
              },
              widget: Some("slotted:text"),
              visible: true,
            ),
            TreeNode(
              role: Anchor,
              anchor: Some("title_end"),
              visible: false,
            ),
            TreeNode(
              role: Panel,
              test_id: Some("buttons"),
              tags: {
                "test_id": "buttons",
              },
              widget: Some("slotted:panel"),
              visible: true,
              children: [
                TreeNode(
                  role: Button,
                  label: Some("slotted.menu.play"),
                  test_id: Some("play"),
                  tags: {
                    "menu": "play",
                    "test_id": "play",
                  },
                  widget: Some("slotted:button"),
                  visible: true,
                  focused: true,
                ),
                TreeNode(
                  role: Button,
                  label: Some("slotted.menu.settings"),
                  test_id: Some("settings"),
                  tags: {
                    "menu": "settings",
                    "test_id": "settings",
                  },
                  widget: Some("slotted:button"),
                  visible: true,
                ),
                TreeNode(
                  role: Button,
                  label: Some("slotted.menu.quit"),
                  test_id: Some("quit"),
                  tags: {
                    "menu": "quit",
                    "test_id": "quit",
                  },
                  widget: Some("slotted:button"),
                  visible: true,
                ),
                TreeNode(
                  role: Anchor,
                  anchor: Some("buttons_end"),
                  visible: true,
                  children: [
                    TreeNode(
                      role: Panel,
                      test_id: Some("about_row"),
                      tags: {
                        "test_id": "about_row",
                      },
                      widget: Some("slotted:panel"),
                      visible: true,
                      children: [
                        TreeNode(
                          role: Button,
                          label: Some("demo.menus.about"),
                          test_id: Some("about"),
                          tags: {
                            "menu": "about",
                            "test_id": "about",
                          },
                          widget: Some("slotted:button"),
                          visible: true,
                        ),
                        TreeNode(
                          role: Button,
                          label: Some("demo.menus.talk"),
                          test_id: Some("talk"),
                          tags: {
                            "menu": "talk",
                            "test_id": "talk",
                          },
                          widget: Some("slotted:button"),
                          visible: true,
                        ),
                      ],
                    ),
                  ],
                ),
              ],
            ),
            TreeNode(
              role: Decor,
              widget: Some("slotted:spacer"),
              visible: false,
            ),
            TreeNode(
              role: Custom("hint_bar"),
              test_id: Some("hints"),
              tags: {
                "test_id": "hints",
              },
              widget: Some("slotted:hint_bar"),
              visible: false,
            ),
            TreeNode(
              role: Anchor,
              anchor: Some("footer"),
              visible: false,
            ),
            TreeNode(
              role: Text,
              label: Some("demo.menus.footer"),
              test_id: Some("footer_note"),
              tags: {
                "test_id": "footer_note",
              },
              widget: Some("slotted:text"),
              visible: true,
            ),
          ],
        ),
      ],
    ),
    TreeNode(
      role: Carried,
      visible: true,
    ),
  ],
)
