examples/menus/tests/snapshots/flow__pause_tree_paper.snap
---
source: examples/menus/tests/flow.rs
expression: h.screen_tree()
---
ScreenTree(
  roots: [
    TreeNode(
      role: Screen,
      screen: Some("slotted:pause"),
      visible: true,
      children: [
        TreeNode(
          role: Panel,
          test_id: Some("pause"),
          tags: {
            "test_id": "pause",
          },
          widget: Some("slotted:panel"),
          visible: true,
          children: [
            TreeNode(
              role: Text,
              label: Some("slotted.menu.paused"),
              test_id: Some("title"),
              tags: {
                "test_id": "title",
              },
              widget: Some("slotted:text"),
              visible: true,
            ),
            TreeNode(
              role: Anchor,
              anchor: Some("title_end"),
              visible: false,
            ),
            TreeNode(
              role: Button,
              label: Some("slotted.menu.resume"),
              test_id: Some("resume"),
              tags: {
                "menu": "resume",
                "test_id": "resume",
              },
              widget: Some("slotted:button"),
              visible: true,
              focused: true,
            ),
            TreeNode(
              role: Button,
              label: Some("slotted.menu.settings"),
              test_id: Some("settings"),
              tags: {
                "menu": "settings",
                "test_id": "settings",
              },
              widget: Some("slotted:button"),
              visible: true,
            ),
            TreeNode(
              role: Button,
              label: Some("slotted.menu.quit"),
              test_id: Some("quit"),
              tags: {
                "menu": "quit",
                "test_id": "quit",
              },
              widget: Some("slotted:button"),
              visible: true,
            ),
            TreeNode(
              role: Anchor,
              anchor: Some("buttons_end"),
              visible: false,
            ),
            TreeNode(
              role: Decor,
              widget: Some("slotted:separator"),
              visible: true,
            ),
            TreeNode(
              role: Custom("hint_bar"),
              test_id: Some("hints"),
              tags: {
                "test_id": "hints",
              },
              widget: Some("slotted:hint_bar"),
              visible: true,
            ),
          ],
        ),
      ],
    ),
    TreeNode(
      role: Carried,
      visible: true,
    ),
  ],
)
